# libRootFftwWrapper

./: AUTHORS  CMakeLists.txt  FFTWComplex.cxx  FFTWComplex.h  FFTtools.cxx  FFTtools.h  FFTtoolsWisdomManager.cxx  FFTtoolsWisdomManager.h  LinkDef.h  Makefile  Makefile.arch  Makefile.config  Makefile.legacy  README  README.md  RFFilter.cxx  RFFilter.h  RFSignal.cxx  RFSignal.h  rootlogon.C  testFFTtools.cxx
cmake/modules/: FindFFTW.cmake  FindROOT.cmake  MacroOptionalAddSubdirectory.cmake
doc/: Doxyfile  customdoxygen.css  doxynew.config  footer.html  header.html
include/: AnalyticSignal.h  Averager.h  CWT.h  DigitalFilter.h  FFTWComplex.h  FFTWindow.h  FFTtools.h  FFTtoolsRev.h  RFInterpolate.h  RFSignal.h  SineSubtract.h
macros/: phasemod.C  testAkima.C  testArtificialSubtract.C  testEnvelope.C  testMinPhase.C  testPeriodogram.C  testResponseFitter.C  testStokes.C
src/: AnalyticSignal.cxx  Averager.cxx  CWT.cxx  DigitalFilter.cxx  FFTWComplex.cxx  FFTWindow.cxx  FFTtools.cxx  FFTtoolsRev.cxx  Periodogram.cxx  RFInterpolate.cxx  RFSignal.cxx  SineSubtract.cxx
test/: testFFTtools.cxx  testOpenMP.cxx  testSubtract.cxx
vectorclass/: changelog.txt  vectorf128.h
